<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/post_activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_margin"
        tools:context=".ui.landing.activity.LandingActivity">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ui_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/url_input_field"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_link_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/url_edit_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_between_components"
                android:layout_marginTop="8dp"
                app:icon="@drawable/ic_baseline_send"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/url_input_field"
                />

            <TextView
                android:id="@+id/recently_items_label"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_light"
                android:layout_marginVertical="@dimen/horizontal_margin_between_components"
                app:layout_constraintTop_toBottomOf="@+id/url_input_field"
                android:text="@string/recently_items_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recently_links_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/recently_items_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/error_view"
            layout="@layout/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewmodel"
            type="co.com.nubank.mobile.challenge.ui.landing.viewmodel.ShortLinkViewModel" />

    </data>
</layout>